# aoc2025

./: .gitignore  README.md  pyproject.toml
.claude/skills/aoc-lessons/: SKILL.md
docs/: day03.md
docs/plans/: 2025-12-01-aoc-workflow-design.md
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
tests/: test_day01.py  test_day02.py
utils/: __init__.py
